[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcpv-mitm-emitter"
version = "0.1.0"
description = "TCPV emitter for mitm integration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "redis>=5.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["tcpv_mitm_emitter*"]
exclude = ["tests*"]
